# vins-rs

./: .gitignore  Cargo.toml  README.md  build.rs
src/: config.rs  feature_manager.rs  feature_trakcer.rs  global_cast.rs  global_types.rs  main.rs  utility.rs
src/camera/: mod.rs  pinhole_camera.rs
src/dataset/: euroc.rs  mod.rs
src/estimator/: image_frame.rs  mod.rs
src/pose_estimator/: feature_manager.rs  image_frame.rs  integration_base.rs  mod.rs  sfm.rs  windows.rs
src/save/: mod.rs  pts.rs
