[package]
name = "vins-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = { version = "0.91.3", default-features = false }


[features]
default = [
    "opencv/imgcodecs",
    "opencv/imgproc",
    "opencv/video",
    "opencv/highgui",
]

[build-dependencies]
build-target = "0.4.0"
