[package]
name = "vins-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
env_logger = "0.11.3"
log = "0.4.21"
opencv = { version = "0.91.3", default-features = false }
yaml-rust2 = "0.8.0"


[features]
default = [
    "opencv/imgcodecs",
    "opencv/imgproc",
    "opencv/video",
    "opencv/highgui",
]

[build-dependencies]
build-target = "0.4.0"
